examples/K8S/minio-less.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: tcp
      port: 9000
      targetPort: 9000
  selector:
    app: minio

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      name: minio-pod
      labels:
        app: minio
    spec:
      containers:
        - name: minio-container
          image: minio/minio
          imagePullPolicy: Always
          command: ["/usr/bin/minio", "server", "/data"]
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          hostPath:
            path: /data/minio
          # nfs:
          #   server: 192.168.1.1
          #   path: "/data/nfs/minio"
          # cephfs:
          #   readOnly: false
          #   monitors:
          #     - 192.168.1.1:6789
          #   user: admin
