examples/K8S/postgres-less.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  type: NodePort
  ports:
    - name: "tcp"
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      volumes:
        - name: postgres-data
          hostPath:
            path: /data/pgdata
          # nfs:
          #   server: 192.168.1.1
          #   path: "/data/nfs/pgdata"
          # cephfs:
          #   readOnly: false
          #   monitors:
          #     - 192.168.1.1:6789
          #   user: admin
